Correcting incorrect spacing value

--- a/core/placeholders/_core-bottom-spacing.scss
+++ b/core/placeholders/_core-bottom-spacing.scss
@@ -15,4 +15,4 @@
 %core-bottom-spacing {@include to-rem(margin-bottom, $spacing-base);}
 
 // Half
-%core-bottom-spacing-half {@include to-rem(margin-bottom, $spacing-base);}
+%core-bottom-spacing-half {@include to-rem(margin-bottom, $spacing-half);}
